--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ ON</b>
 </p>
               <h1 class="wow fadeInDown heading" data-wow-delay=".4s">MEDICINAL, AROMATIC AND NUTRACEUTICAL PLANTS FROM MOUNTAINOUS AREAS 
 </h1>
-              <a href="assets/img/registration-form.PDF" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now</a>
+              <a href="assets/img/registration-form.pdf" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now</a>
               <a href="#about" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Explore More</a>
             </div>
           </div>
@@ -1402,7 +1402,7 @@ Tariffs for accompanying person will be 25% of delegate fee for the concerned ca
                   <li><i class="lni-check-mark-circle"></i><span class="text">Workshop</span></li>
                 </ul>
               </div> -->
-              <a href="assets/img/registration-form.PDF" class="btn btn-common">Register Now</a>
+              <a href="assets/img/registration-form.pdf" class="btn btn-common">Register Now</a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 col-xa-12 mb-3">
@@ -1428,7 +1428,7 @@ Tariffs for accompanying person will be 25% of delegate fee for the concerned ca
                   <li><i class="lni-close"></i><span class="text">Workshop</span></li>
                 </ul>
               </div> -->
-              <a href="assets/img/registration-form.PDF" class="btn btn-common">Register Now</a>
+              <a href="assets/img/registration-form.pdf" class="btn btn-common">Register Now</a>
             </div>
           </div> 
           <div class="col-lg-4 col-sm-6 col-xa-12 mb-3">
@@ -1454,7 +1454,7 @@ Tariffs for accompanying person will be 25% of delegate fee for the concerned ca
                   <li><i class="lni-close"></i><span class="text">Workshop</span></li>
                 </ul>
               </div> -->
-              <a href="assets/img/registration-form.PDF" class="btn btn-common">Register Now</a>
+              <a href="assets/img/registration-form.pdf" class="btn btn-common">Register Now</a>
             </div>
           </div> 
         </div>
