--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ ON</b>
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="about-item">
-              <img class="img-fluid" src="//assets/img/about/img1.jpg" alt="">
+              <img class="img-fluid" src="/assets/img/about/img1.jpg" alt="">
               <div class="about-text">
                 <h3><a href="#">About Uttarakhand</a></h3>
                 <p>Uttarakhand is one of the mountainous states of India situated north - east of New Delhi (250 km by road, 305 km by train).  Dehradun is the capital of Uttarakhand and well connected by Air, Rail and Road.  The state is located in the Indian Himalayan Region (IHR) which is a treasure trove of medicinal plants and around 1700 medicinal plants are known to occur in IHR.  Dehradun presents a good blend of modern city life with hill culture. Climate of Dehradun in February is moderate with minimum and maximum temperatures ranging between 7 °C to 21 °C. The days are normally pleasant and clear; occasional rains may be expected. Light woolens are recommended (visit: <a href="www.weather.com" >www.weather.com </a> for weather details – Zip / pin code - 248001)</p>
@@ -258,7 +258,7 @@ ON</b>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="about-item">
-              <img class="img-fluid" src="//assets/img/about/img2.jpg" alt="">
+              <img class="img-fluid" src="/assets/img/about/img2.jpg" alt="">
               <div class="about-text">
                 <h3><a href="#">Graphic Era (Deemed to be University)</a></h3>
                 <p>Accredited by NAAC  with Grade ‘A’ is located in the Dehradun valley of Uttarakhand. The Graphic Era groupof institutions is celebrating silver jubilee of its initial establishment. The University status was granted in 2008 and it offers a vibrant cultural ambience that aids in unleashing the hidden talent of the students through overall development and grooming. The Department of Biotechnology was also established in 2008 and the Department of Life Sciences bifurcated from the parent department in 2016. The Departments offer UG (B.Tech., B.Sc. (Hons.) and PG (M.Tech., M.Sc.) programs in Biotechnology& Microbiology along with Ph.D. programsand B. Sc. (Hons.) in Food Technology</p>
@@ -268,7 +268,7 @@ ON</b>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="about-item">
-              <img class="img-fluid" src="//assets/img/about/img3.jpg" alt="">
+              <img class="img-fluid" src="/assets/img/about/img3.jpg" alt="">
               <div class="about-text">
                 <h3><a href="#">American Council for Medicinally Active Plants (ACMAP)</a></h3>
                 <p>The primary purpose of ACMAP is to promote and foster research, development, production, and conservation of medicinal, aromatic, and other bioactive plants useful to human health. ACMAP currently envisages basic and applied research on plant production, product development and evaluation as well as marketing to provide better healthcare products for healthy life for both human and animal population.</p>
@@ -472,7 +472,7 @@ ON</b>
         <div class="row services-wrapper">
           <p style="width: 100%; padding-left: 15px; text-color:#000000;">Abstract(s) of paper(s), related to the conference themes should be sent through e-mail to ashish.thapliyal@geu.ac.in and copied to njoshee@outlook.com. Please visit <a href="http://www.geu.ac.in">http://geu.ac.in</a> to use abstract submission form.</br>
 All contributed papers will be scrutinized and selected for oral (12+3 min duration) or poster presentation (size: 4ft Long x 3 ft Wide); in this regard decision of the committee of experts shall be final; corresponding author may, however, indicate preference for oral/poster presentation through mail/registration form. The outstanding contributed presentations and posters would be awarded.</br></br>
-<a href="//assets/acmap-2019-abstract-submission-form-template.pdf" class="btn btn-common" target="new_window">Download Abstract Form</a></p>
+<a href="/assets/acmap-2019-abstract-submission-form-template.pdf" class="btn btn-common" target="new_window">Download Abstract Form</a></p>
           <!-- Services item -->
          
         </div>
