--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <title>INTERNATIONAL CONFERENCE ON MEDICINAL, AROMATIC AND NUTRACEUTICAL PLANTS FROM MOUNTAINOUS AREAS</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css" >
     <!-- Icon -->
-    <link rel="stylesheet" type="text/css" href="assets/fonts/line-icons.css">
+    <link rel="stylesheet" type="text/css" href="/assets/fonts/line-icons.css">
     <!-- Slicknav -->
-    <link rel="stylesheet" type="text/css" href="assets/css/slicknav.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/slicknav.css">
     <!-- Nivo Lightbox -->
-    <link rel="stylesheet" type="text/css" href="assets/css/nivo-lightbox.css" >
+    <link rel="stylesheet" type="text/css" href="/assets/css/nivo-lightbox.css" >
     <!-- Animate -->
-    <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/animate.css">
     <!-- Main Style -->
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
     <!-- Responsive Style -->
-    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
 <script src="/bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -64,7 +64,7 @@
               <span class="icon-menu"></span>
               <span class="icon-menu"></span>
             </button>
-            <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a>
+            <a href="index.html" class="navbar-brand"><img src="/assets/img/logo.png" alt=""></a>
           </div>
           <div class="collapse navbar-collapse" id="main-navbar">
             <ul class="navbar-nav mr-auto w-100 justify-content-end">
@@ -163,7 +163,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="assets/img/slider/slide1.jpg" alt="First slide">
+            <img class="d-block w-100" src="/assets/img/slider/slide1.jpg" alt="First slide">
             <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s"><b>INTERNATIONAL CONFERENCE
 ON</b>
@@ -175,7 +175,7 @@ ON</b>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="assets/img/slider/slide2.jpg" alt="Second slide">
+            <img class="d-block w-100" src="/assets/img/slider/slide2.jpg" alt="Second slide">
             <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s">9TH ANNUAL CONFERENCE</p>
               <h1 class="wow bounceIn heading" data-wow-delay=".7s">AMERICAN COUNCIL FOR MEDICINALLY ACTIVE PLANTS (ACMAP)
