--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@ Tariffs for accompanying person will be 25% of delegate fee for the concerned ca
         <div class="row">
           <div class="col-lg-4 col-sm-6 col-xa-12 mb-3">
             <div class="price-block-wrapper wow fadeInLeft" data-wow-delay="0.2s">
-               <img src="/assets/img/gallery/a.png"> 
+               <img src="a.png"> 
             <!--<div class="icon">
                 <i class="lni-write"></i>
               </div>
@@ -1407,7 +1407,7 @@ Tariffs for accompanying person will be 25% of delegate fee for the concerned ca
           </div>
           <div class="col-lg-4 col-sm-6 col-xa-12 mb-3">
             <div class="price-block-wrapper wow fadeInUp" data-wow-delay="0.3s">
-            <img src="/assets/img/gallery/b.png">
+            <img src="b.png">
               <!-- <div class="icon">
                 <i class="lni-layers"></i>
               </div>
@@ -1433,7 +1433,7 @@ Tariffs for accompanying person will be 25% of delegate fee for the concerned ca
           </div> 
           <div class="col-lg-4 col-sm-6 col-xa-12 mb-3">
             <div class="price-block-wrapper wow fadeInRight" data-wow-delay="0.4s">
-            <img src="/assets/img/gallery/c.png">
+            <img src="c.png">
               <!-- <div class="icon">
                 <i class="lni-leaf"></i>
               </div>
