--- a/index.html
+++ b/index.html
@@ -1736,7 +1736,7 @@ Contact number: &nbsp;&nbsp;(Mob) +91-9868454521, +91-9810992927 </br> Email:&nb
         <div class="row">
           <div class="col-md-12">
             <div class="site-info">
-              <p>© Designed and Developed by <a href="https://www.linkedin.com/in/deepak-kundu-web-analyst" rel="nofollow" target="new_window"><b>Deepak Kundu </b> </a> - chief website administrator, <a href="http://www.geu.ac.in" rel="nofollow" target="new_window">Graphic Era (Deemed to be University) </a></p>
+              <p> <a href="https://www.geu.ac.in" rel="nofollow" target="new_window">Graphic Era (Deemed to be University) © 2018</a></p>
             </div>      
           </div>
         </div>
@@ -1779,7 +1779,7 @@ Contact number: &nbsp;&nbsp;(Mob) +91-9868454521, +91-9810992927 </br> Email:&nb
     <script src="/assets/js/form-validator.min.js"></script>
     <script src="/assets/js/contact-form-script.min.js"></script>
     <script src="/assets/js/map.js"></script>
-    <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyCsa2Mi2HqyEcEnM1urFSIGEpvualYjwwM"></script>
+    <script type="text/javascript" src="/maps.googleapis.com/maps/api/js?key=AIzaSyCsa2Mi2HqyEcEnM1urFSIGEpvualYjwwM"></script>
       
   </body>
 </html>
