--- a/index.html
+++ b/index.html
@@ -1719,10 +1719,11 @@ Contact number: &nbsp;&nbsp;(Mob) +91-9868454521, +91-9810992927 </br> Email:&nb
             <div class="widget">
               <h5 class="widget-title">FOLLOW US ON</h5>
               <ul class="footer-social">
-                <li><a class="facebook" href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li><a class="twitter" href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li><a class="linkedin" href="#"><i class="lni-linkedin-filled"></i></a></li>
-                <li><a class="google-plus" href="#"><i class="lni-google-plus"></i></a></li>
+                <li><a class="facebook" href="https://www.facebook.com/GEUOfficial/"><i class="lni-facebook-filled"></i></a></li>
+                <li><a class="twitter" href="https://twitter.com/GEU_Official"><i class="lni-twitter-filled"></i></a></li>
+                <li><a class="linkedin" href="https://www.linkedin.com/company/graphic-era"><i class="lni-linkedin-filled"></i></a></li>
+                <li><a class="youtube" href="https://www.youtube.com/GraphicEraOfficial"><i class="lni-youtube"></i></a></li>
+				<li><a class="instagram" href="https://www.instagram.com/geuofficial/"> <i class="lni-instagram"></i></a></li>
               </ul>
             </div>
           </div>
