PNG repalce png

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ All contributed papers will be scrutinized and selected for oral (12+3 min durat
                     <div id="headingOne">
                       <div class="collapsed card-header" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                         <div class="images-box">
-                          <img class="img-fluid" src="/assets/img/logo_geu.PNG" alt="Graphic Era Deemed to be Univerity">
+                          <img class="img-fluid" src="/assets/img/logo_geu.png" alt="Graphic Era Deemed to be Univerity">
                         </div>                     
                         <span class="time">Thursday – February 14, 2019</span>
                         <h4>Brief Program</h4>
@@ -639,7 +639,7 @@ All contributed papers will be scrutinized and selected for oral (12+3 min durat
                     <div id="headingOne1">
                       <div class="collapsed card-header" data-toggle="collapse" data-target="#collapseOne1" aria-expanded="false" aria-controls="collapseOne1">
                         <div class="images-box">
-                          <img class="img-fluid" src="/assets/img/logo_geu.PNG" alt="Graphic Era Deemed to be Univerity">
+                          <img class="img-fluid" src="/assets/img/logo_geu.png" alt="Graphic Era Deemed to be Univerity">
                         </div>                     
                         <span class="time">Friday – February 15, 2019</span>
                         <h4>Brief Program</h4>
@@ -695,7 +695,7 @@ All contributed papers will be scrutinized and selected for oral (12+3 min durat
                     <div id="headingOne3">
                       <div class="collapsed card-header" data-toggle="collapse" data-target="#collapseOne3" aria-expanded="false" aria-controls="collapseOne3">
                         <div class="images-box">
-                          <img class="img-fluid" src="/assets/img/logo_geu.PNG" alt="Graphic Era Deemed to be Univerity">
+                          <img class="img-fluid" src="/assets/img/logo_geu.png" alt="Graphic Era Deemed to be Univerity">
                         </div>                     
                         <span class="time">Saturday – February 16, 2019</span>
                         <h4>Brief Program</h4>
