--- a/download.html
+++ b/download.html
@@ -22,6 +22,16 @@
     <!-- Responsive Style -->
     <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
 <script src="/bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-77297502-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-77297502-2');
+</script>
+
   </head>
   <body>
 
