--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
     overflow: hidden;
 }
 </style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-77297502-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-77297502-2');
+</script>
+
   </head>
   <body>
 
