--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ ON</b>
               <div class="about-text">
                 <h3><a href="#">About Uttarakhand</a></h3>
                 <p>Uttarakhand is one of the mountainous states of India situated north - east of New Delhi (250 km by road, 305 km by train).  Dehradun is the capital of Uttarakhand and well connected by Air, Rail and Road.  The state is located in the Indian Himalayan Region (IHR) which is a treasure trove of medicinal plants and around 1700 medicinal plants are known to occur in IHR.  Dehradun presents a good blend of modern city life with hill culture. Climate of Dehradun in February is moderate with minimum and maximum temperatures ranging between 7 °C to 21 °C. The days are normally pleasant and clear; occasional rains may be expected. Light woolens are recommended (visit: <a href="www.weather.com" >www.weather.com </a> for weather details – Zip / pin code - 248001)</p>
-                <a class="btn btn-common btn-rm" href="http://uk.gov.in/" target="new_window">Read More</a>
+                <a class="btn btn-common btn-rm" href="https://goo.gl/ypdrzA" target="new_window">Read More</a>
               </div>
             </div>
           </div>
@@ -282,7 +282,7 @@ ON</b>
               <div class="about-text">
                 <h3><a href="#">American Council for Medicinally Active Plants (ACMAP)</a></h3>
                 <p>The primary purpose of ACMAP is to promote and foster research, development, production, and conservation of medicinal, aromatic, and other bioactive plants useful to human health. ACMAP currently envisages basic and applied research on plant production, product development and evaluation as well as marketing to provide better healthcare products for healthy life for both human and animal population.</p>
-                <a class="btn btn-common btn-rm" href="http://www.acmap.org" target="new_window">Read More</a>
+                <a class="btn btn-common btn-rm" href="https://goo.gl/RrFRah" target="new_window">Read More</a>
               </div>
             </div>
           </div>
@@ -356,7 +356,7 @@ ON</b>
                 </h3>
                 <div class="meta-tags">
                   <span class="date"><p>Secretary, </br>Department of Biotechnology 
-</p><p>Ministry of Science & Technology, Government of India</p></br><a href="http://www.dbtindia.nic.in/dbt-officials" target="new_window">Know More</a></span> 
+</p><p>Ministry of Science & Technology, Government of India</p></br><a href="https://goo.gl/4ssPkD" target="new_window">Know More</a></span> 
                  
                 </div>
               </div>
@@ -480,7 +480,7 @@ ON</b>
           </div>
         </div>
         <div class="row services-wrapper">
-          <p style="width: 100%; padding-left: 15px; text-color:#000000;">Abstract(s) of paper(s), related to the conference themes should be sent through e-mail to ashish.thapliyal@geu.ac.in and copied to njoshee@outlook.com. Please visit <a href="http://www.geu.ac.in">http://geu.ac.in</a> to use abstract submission form.</br>
+          <p style="width: 100%; padding-left: 15px; text-color:#000000;">Abstract(s) of paper(s), related to the conference themes should be sent through e-mail to ashish.thapliyal@geu.ac.in and copied to njoshee@outlook.com. Please visit <a href="https://www.geu.ac.in">https://geu.ac.in</a> to use abstract submission form.</br>
 All contributed papers will be scrutinized and selected for oral (12+3 min duration) or poster presentation (size: 4ft Long x 3 ft Wide); in this regard decision of the committee of experts shall be final; corresponding author may, however, indicate preference for oral/poster presentation through mail/registration form. The outstanding contributed presentations and posters would be awarded.</br></br>
 <a href="/assets/acmap-2019-abstract-submission-form-template.pdf" class="btn btn-common" target="new_window">Download Abstract Form</a></p>
           <!-- Services item -->
@@ -1293,11 +1293,11 @@ Mr. Garurav Joshi will handle all the queries related to stay and travel at all 
                   <div class="card-body">
                     Single or shared accommodation can be availed at the following hotels in the vicinity of conference venue (within 5 Kms) at Graphic Era (Deemed to be University), Dehradun.</br> 
 Suggested hotels near conference venue are:
-<ul><li>Hotel Softel Plaza (<a href="http://www.hotelsoftelplazadehradun.com">www.hotelsoftelplazadehradun.com</a>)</li>
-<li>Seyfert Sarovar Portico (<a href="http://www.sarovarhotels.com">www.sarovarhotels.com</a>) </li>
-<li>Hotel Sandstone (<a href="http://www.hotelsandstone.com">www.hotelsandstone.com</a>) </li>
-<li>Hotel Viceroy Inn(<a href="http://www.hotelviceroyinn.com">www.hotelviceroyinn.com</a>) </li>
-<li>Hotel Pearl Grand (<a href="http://www.thepearlgrand.com">www.thepearlgrand.com</a>) </li></ul>
+<ul><li>Hotel Softel Plaza (<a href="https://goo.gl/2imtEp">www.hotelsoftelplazadehradun.com</a>)</li>
+<li>Seyfert Sarovar Portico (<a href="https://goo.gl/yQXKmE">www.sarovarhotels.com</a>) </li>
+<li>Hotel Sandstone (<a href="https://goo.gl/QupQPW">www.hotelsandstone.com</a>) </li>
+<li>Hotel Viceroy Inn(<a href="https://goo.gl/b1CdTx">www.hotelviceroyinn.com</a>) </li>
+<li>Hotel Pearl Grand (<a href="https://goo.gl/ZjEsgR">www.thepearlgrand.com</a>) </li></ul>
 The room rates shown on the websites of respective hotels are indicative. Actual tariff can be negotiated once bulk bookings are done.</br>
 <b>Mr. Garurav Joshi will also handle all the queries related to stay and travel at all destinations.</b>
 
@@ -1546,7 +1546,7 @@ University Campus (Distance Approximately 10 Km/2 Km, respectively.)
                   </a>
                 </h3>
                 <div class="meta-tags">
-                  <span class="date">1. <a href="http://www.khenchenrinpoche.org">Buddha Temple</a> </br> 2. <a href="http://www.fri.res.in">Forest Research Institute (FRI)</a> </br> 3. <a href="http://www.ucost.in/blog/rsc">Regional Science Centre (RSC)</a> </br> (Complementary)</span>
+                  <span class="date">1. <a href="https://goo.gl/uE68N2">Buddha Temple</a> </br> 2. <a href="https://goo.gl/FGijvE">Forest Research Institute (FRI)</a> </br> 3. <a href="https://goo.gl/Gdupuf">Regional Science Centre (RSC)</a> </br> (Complementary)</span>
                 </div>
               </div>
             </div>
@@ -1568,11 +1568,11 @@ University Campus (Distance Approximately 10 Km/2 Km, respectively.)
                 <div class="meta-tags">
                   <span class="date">Single or shared accommodation can be availed at the following hotels in the vicinity of conference venue (within 5 Kms) at Graphic Era (Deemed to be University), Dehradun.</br> 
 <b>Suggested hotels near conference venue are:</b>
-<ul><li> <a href="http://www.hotelsoftelplazadehradun.com" target="new_window">Hotel Softel Plaza </a> </li>
-<li><a href="http://www.sarovarhotels.com" target="new_window">Seyfert Sarovar Portico </a> </li>
-<li><a href="http://www.hotelsandstone.com" target="new_window">Hotel Sandstone </a> </li>
-<li><a href="http://www.hotelviceroyinn.com" target="new_window">Hotel Viceroy Inn</a> </li>
-<li><a href="http://www.thepearlgrand.com" target="new_window">Hotel Pearl Grand </a> </li></ul>
+<ul><li> <a href="https://goo.gl/BcFkGZ" target="new_window">Hotel Softel Plaza </a> </li>
+<li><a href="https://goo.gl/5xmvdq" target="new_window">Seyfert Sarovar Portico </a> </li>
+<li><a href="https://goo.gl/7QWddb" target="new_window">Hotel Sandstone </a> </li>
+<li><a href="https://goo.gl/MqKXhp" target="new_window">Hotel Viceroy Inn</a> </li>
+<li><a href="https://goo.gl/9S79DT" target="new_window">Hotel Pearl Grand </a> </li></ul>
 The room rates shown on the websites of respective hotels are indicative. Actual tariff can be negotiated once bulk bookings are done.</span>
                   
                 </div>
