--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ ON</b>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-4">
             <div class="about-item">
-              <img class="img-fluid" src="/assets/img/about/img2.jpg" alt="">
+              <img class="img-fluid" src="/assets/img/about/about_image.jpg" alt="">
               <div class="about-text">
                 <h3><a href="#">Graphic Era (Deemed to be University)</a></h3>
                 <p>Accredited by NAAC  with Grade ‘A’ is located in the Dehradun valley of Uttarakhand. The Graphic Era groupof institutions is celebrating silver jubilee of its initial establishment. The University status was granted in 2008 and it offers a vibrant cultural ambience that aids in unleashing the hidden talent of the students through overall development and grooming. The Department of Biotechnology was also established in 2008 and the Department of Life Sciences bifurcated from the parent department in 2016. The Departments offer UG (B.Tech., B.Sc. (Hons.) and PG (M.Tech., M.Sc.) programs in Biotechnology& Microbiology along with Ph.D. programsand B. Sc. (Hons.) in Food Technology</p>
