--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ ON</b>
         <div class="row services-wrapper">
           <p style="width: 100%; padding-left: 15px; text-color:#000000;">Abstract(s) of paper(s), related to the conference themes should be sent through e-mail to ashish.thapliyal@geu.ac.in and copied to njoshee@outlook.com. Please visit <a href="https://www.geu.ac.in">https://geu.ac.in</a> to use abstract submission form.</br>
 All contributed papers will be scrutinized and selected for oral (12+3 min duration) or poster presentation (size: 4ft Long x 3 ft Wide); in this regard decision of the committee of experts shall be final; corresponding author may, however, indicate preference for oral/poster presentation through mail/registration form. The outstanding contributed presentations and posters would be awarded.</br></br>
-<a href="/assets/acmap-2019-abstract-submission-form-template.pdf" class="btn btn-common" target="new_window">Download Abstract Form</a></p>
+<a href="/assets/acmap-2019-abstract-submission-form-template.docx" class="btn btn-common" target="new_window">Download Abstract Form</a></p>
           <!-- Services item -->
          
         </div>
@@ -1412,7 +1412,7 @@ Tariffs for accompanying person will be 25% of delegate fee for the concerned ca
                   <li><i class="lni-check-mark-circle"></i><span class="text">Workshop</span></li>
                 </ul>
               </div> -->
-              <a href="/assets/img/registration-form.pdf" class="btn btn-common">Register Now</a>
+              <a href="/assets/Registration-from-International-Symposium.docx" class="btn btn-common">Register Now</a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 col-xa-12 mb-3">
