--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ ON</b>
 </p>
               <h1 class="wow fadeInDown heading" data-wow-delay=".4s">MEDICINAL, AROMATIC AND NUTRACEUTICAL PLANTS FROM MOUNTAINOUS AREAS 
 </h1>
-              <a href="/assets/img/registration-form.pdf" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now</a>
+              <a href="/assets/Registration-from-International-Symposium.docx" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now</a>
               <a href="#about" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Explore More</a>
             </div>
           </div>
