--- a/download.html
+++ b/download.html
@@ -216,7 +216,7 @@ ON</b>
                 <i class="lni-clipboard"></i>
               </div>
               <div class="services-content">
-                <h3><a href="/assets/img/registration-form.pdf"; target="new_window">Registration Form</a></h3>
+                <h3><a href="/assets/Registration-from-International-Symposium.docx"; target="new_window">Registration Form</a></h3>
                 <p>Email Filled Registrations Form</p>
               </div>
             </div>
