--- a/index.html
+++ b/index.html
@@ -1596,7 +1596,8 @@ The room rates shown on the websites of respective hotels are indicative. Actual
                 <div class="meta-tags">
                   <span class="date">Paramount Pathfinders, New Delhi, 110063, India
 Contact number: &nbsp;&nbsp;(Mob) +91-9868454521, +91-9810992927 </br> Email:&nbsp;&nbsp;joshigaurav73@gmail.com, paramount@paramountonline.net</span> 
-                 
+                 <br><br>
+<b>Visa Related Information</b><br><a href="/assets/General_Information.docx"> General Information</a><br><a href="assets/eTV_revised_fee_final.pdf">Download Revised Fees</a><br><a href="/assets/india_Visa_application_guide.pdf"> Download Visa Application Guide</a>
                 </div>
               </div>
             </div>
