--- a/index.html
+++ b/index.html
@@ -1256,6 +1256,7 @@ A copy of duly filled registration form and details of registration fee should b
                 <div id="questionFour" class="collapse" aria-labelledby="headingThree" data-parent="#question">
                   <div class="card-body">
                     Visa norms differ for various countries.  Please check the website of Indian consulate of your country.
+			  <a href="/assets/General_Information.docx"> General Information</a><br><a href="assets/eTV_revised_fee_final.pdf">Download Revised Fees</a><br><a href="/assets/india_Visa_application_guide.pdf"> Download Visa Application Guide</a>
                   </div>
                 </div>
               </div>
